# PII-Prelabel

./: NER DEMO Mari1.json  PII Test 5 - spanish upload.json  PII Test 6 .json  PII Test EN1.json  PKG-INFO  README.md  entity_mapping.csv  labels.csv  prelabel_ne.py  pyproject.toml  setup.bat  setup.py
scripts/: input_file_reader.py  label_file.py  language_configuration.py  ner.py  upload_file_creator.py
