[tool.poetry]
name = "prelabel_ne"
version = "0.2.1"
description = "NER pre-labeling for Oracle projects."
authors = ["Jari Peräkylä <jari.perakyla@telusinternational.com>"]

include = ["prelabel_ne.py", "entity_mapping.csv", "setup.bat", "language_models", "README.md"]
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.4"
pandas = "^1.5"
psutil = "^5.9"
gooey = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
